--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,4 +21,15 @@ services:
       command: > 
         bash -c "source /opt/ros/humble/setup.bash; 
         source install/setup.bash;
-        ros2 launch h264_image_transport launch_encoder_and_publisher.py"
+        ros2 launch h264_image_transport launch_encoder.py"
+
+    publisher:
+      restart: always
+      build: 
+        context: ./
+        dockerfile: ./Dockerfile
+      network_mode: "host" 
+      command: > 
+        bash -c "source /opt/ros/humble/setup.bash; 
+        source install/setup.bash;
+        ros2 launch h264_image_transport launch_publisher.py"
